feat: column mhetod delete
