# src/resources/column/column.router.js
@@ -1,6 +1,7 @@
 const router = require('express').Router({ mergeParams: true });
 const columnService = require('./column.service');
 const Column = require('./column.model');
+const { handleError, NotFoundError } = require('../../logger/loggerConfig');
 
 router.get('/', async (req, res) => {
   const columns = await columnService.getAll(req.params.boardId);
@@ -21,13 +22,34 @@ router.route('/').post(async (req, res) => {
   res.json(column.toResponse());
 });
 
-router.get('/:id', async (req, res) => {
-  const columns = await columnService.get(req.params.boardId, req.params.id);
-  if (!columns.length) {
+router.route('/:id').get(async (req, res) => {
+  const column = await columnService.get(req.params.boardId, req.params.id);
+  if (!column) {
     res.status(404).send(`unexpected param id: ${req.params.id}`);
   } else {
-    res.json(columns.toResponse());
+    res.json(column.toResponse());
   }
 });
 
+router.route('/:id').delete(async (req, res) => {
+  try {
+    const column = await columnService.deleteColumn(
+      req.params.boardId,
+      req.params.id
+    );
+    res.status(204).json(column);
+  } catch (e) {
+    res.status(404).json(e);
+  }
+});
+
+router.route('/:id').put(async (req, res) => {
+  const { id, boardId } = req.params;
+  try {
+    const column = await columnService.update(id, boardId, req.body);
+    res.status(200).json(column);
+  } catch (e) {
+    handleError(new NotFoundError('Columns', `id: ${req.params.id}`), req, res);
+  }
+});
 module.exports = router;
